# 4425126-testing-python-flask

./: .gitignore  README.md  app.py  config.py  database.db  requirements.txt  setup.cfg
templates/: base.html  calculation.html  dashboard.html  error.html  login.html  register.html
tests/: test_app.py
tests/utilities/: test_calculation.py  test_user.py
utilities/: __init__.py  calculation.py  user.py
