[metadata]
name = flask_app
version = 1.0.0

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = app

[flake8]
max-line-length = 119
exclude = venv/